--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation project(path: ':base')
     implementation project(path: ':api')
     testImplementation 'junit:junit:4.13.2'
