--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,8 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
+
+
+
+    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
 }
