--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,7 @@ dependencies {
 
 
     implementation 'com.github.chrisbanes:PhotoView:2.0.0'
+
+
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 }
