--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,8 @@ dependencies {
 
 
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
+
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
